# stove-guard

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
apps/common/: CMakeLists.txt  FakeFrameAnalyzer.cpp  FakeFrameAnalyzer.h  SimpleSceneInterpreter.cpp  SimpleSceneInterpreter.h
apps/demo/: CMakeLists.txt  main.cpp
apps/video_demo/: CMakeLists.txt  main.cpp
apps/video_demo/src/: AppOptions.h  ArgParser.cpp  ArgParser.h  DemoScenario.h  OpencvFrameDisplay.cpp  OpencvFrameDisplay.h  VideoFileFrameSource.cpp  VideoFileFrameSource.h  main.cpp
cmake/: Dependencies.cmake  FindOnnxRuntime.cmake
demo/models/: yolov8n.onnx
scripts/: setup_onnx_deps.sh
src/: AnalysisResult.h  Clock.h  ConsoleNotifier.cpp  ConsoleNotifier.h  Detection.h  DetectionFilter.cpp  DetectionFilter.h  DetectionMapper.cpp  DetectionMapper.h  Frame.h  FrameAnalyzer.h  FrameDisplay.h  FrameSource.h  FrameTimer.cpp  FrameTimer.h  Notifier.h  ObjectDetection.h  RealClock.cpp  RealClock.h  SafetyService.cpp  SafetyService.h  SceneInterpreter.h  SceneMapper.cpp  SceneMapper.h  SceneState.h  StateStabilizer.h  StoveGuardApp.cpp  StoveGuardApp.h  StoveGuardRunner.cpp  StoveGuardRunner.h  StoveMonitor.cpp  StoveMonitor.h  VideoPipeline.cpp  VideoPipeline.h  YoloFrameAnalyzer.cpp  YoloFrameAnalyzer.h  main.cpp
tests/: CMakeLists.txt  DetectionFilterTests.cpp  DetectionMapperTests.cpp  FakeData.h  SafetyServiceTests.cpp  SceneMapperTests.cpp  StateStabilizerTests.cpp  StoveGuardAppTests.cpp  StoveMonitorTests.cpp  VideoPipelineTests.cpp
